force-app/main/default/objects/Discount_Request__c/Discount_Request__c.object-meta.xml
<CustomObject>
    <description>Request for a discount beyond what the pricing policy grants, with its own lifecycle and approval trail. Operational record, not configuration, which is why it is a custom object and not Custom Metadata. Detail of Opportunity: the request has no meaning without the deal, cascade delete is the correct behaviour, and sharing inherited from the opportunity means whoever sees the deal sees the request.</description>
    <label>Discount Request</label>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Discount Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>