force-app/main/default/objects/Discount_Request__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>Authority the request needs, derived from the margin policy thresholds.</description>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
            <value>
                <fullName>Deal Desk + Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>