force-app/main/default/objects/Discount_Request__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User the request is currently sitting with.</description>
    <label>Current Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Discount Requests (Current Approver)</relationshipLabel>
    <relationshipName>Discount_Requests_Approving</relationshipName>
    <type>Lookup</type>
</CustomField>