force-app/main/default/objects/Discount_Request__c/fields/Current_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Current_Margin_Percent__c</fullName>
    <description>Gross margin of the deal before the requested discount. Written by the pricing engine.</description>
    <label>Current Margin Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>