force-app/main/default/objects/Discount_Request__c/fields/Decision_At__c.field-meta.xml
<CustomField>
    <fullName>Decision_At__c</fullName>
    <description>When the request was approved, rejected or sent back.</description>
    <label>Decision At</label>
    <type>DateTime</type>
</CustomField>