force-app/main/default/objects/Discount_Request__c/fields/Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Decision_Notes__c</fullName>
    <description>What the approver said when deciding. Audit trail for the exception.</description>
    <label>Decision Notes</label>
    <type>TextArea</type>
</CustomField>