force-app/main/default/objects/Discount_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Deal the discount is being requested for. Master-detail because a discount request has no existence apart from its opportunity, and because sharing must be inherited from the deal.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Discount Requests</relationshipLabel>
    <relationshipName>Discount_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>