force-app/main/default/objects/Discount_Request__c/fields/Policy_Discount__c.field-meta.xml
<CustomField>
    <fullName>Policy_Discount__c</fullName>
    <description>Discount the pricing policy already allowed at the time of the request. Written by the pricing engine; nobody edits it, so the exception is measured against an untouched baseline.</description>
    <label>Policy Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>