force-app/main/default/objects/Discount_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Business justification for going beyond policy. Required reading for the approver.</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>