force-app/main/default/objects/Discount_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who raised the request. Kept as data rather than relying on CreatedById so the requester survives a record created by an integration or by an admin on someone's behalf.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Discount Requests (Requested By)</relationshipLabel>
    <relationshipName>Discount_Requests_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>