force-app/main/default/objects/Discount_Request__c/fields/Requested_Discount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount__c</fullName>
    <description>Discount the seller is asking for, against list price.</description>
    <label>Requested Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>