force-app/main/default/objects/Discount_Request__c/fields/Requested_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Requested_Margin_Percent__c</fullName>
    <description>Gross margin the deal would have if the requested discount were granted.</description>
    <label>Requested Margin Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>