force-app/main/default/objects/Discount_Request__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <description>When the request left Draft. Anchors the approval SLA.</description>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>